Played around with Obiturary styling
Doesn’t seem to work somehow…Color band now showing up

--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
             <div class="two column row">
                 <div class="column column-customize clearfix">
                     <span class="obiturary-news">
-                        <div id="obiturary" class="customize-color-obiturary"></div>
+                        <div id="obiturary" class="obiturary-band"></div>
                         <div class="column" ng-repeat="obiturary in obituraries">
                             <h3 class="Obiturarytitle1">{{obiturary.title}}</h3>
                             <p class="DocBody">{{obiturary.body}}</p>
