improved display of sentiment

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
                 <div class="column column-customize clearfix" ng-repeat="document in documents">
                     <span class="major-news" >
                         <a class="ui left black corner label label-customize">
-                            <i class="move icon" ng-click="CopyContent($event)"></i>
+                            <i class="pin icon" ng-click="copyContent($event)"></i>
                         </a>
                         <div id="sentiment" style="{{document.sentimentCSS}}" class="customize-color"></div>
                         <div style="margin:4em 2em 2em 2em;">
