--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
                 <span ng-repeat="keyword in keywords | filter:searchText" ng-click="setCurrentKeyword(keyword)">{{keyword}}</span>
             </div>
         </div>
-        <!--Documents-->
+
 
         <h1 class="ui header teal label" id="FirstTitle" ng-show="currentKeyword">Documents from {{currentMonth}} containing "{{currentKeyword}}"</h1>
         <div class="container">
@@ -68,7 +68,7 @@
                             <a class="ui left black corner label label-customize" ng-click="copyContent($event)">
                                 <i class="pin icon"></i>
                             </a>
-                            <div style="{{document.sentimentCSS}}" class="customize-color sentiment"></div>
+                            <div id="sentiment" style="{{document.sentimentCSS}}" class="customize-color"></div>
                             <div style="margin:4em 2em 2em 2em;">
                                 <h3 class="DocTitle">{{document.title}}</h3>
                                 <h5 class="DocAuthorAndDate dividing header">{{document.date}}</h5>
@@ -111,31 +111,6 @@
                 </div><!--ui page grid demo-->
             </div>
         </div>
-
-        <h1 class="ui header teal label" id="" ng-show="currentKeyword">FactSheets containing "{{currentKeyword}}"</h1>
-        <div class="container">
-            <div class="ui pagd grid demo">
-                <div class="four column row" >
-                    <div class="column column-customize clearfix" ng-repeat="factsheet in factsheets">
-                        <div class="major-news" data-factsheetId="{{factsheet.id}}">
-                            <a class="ui left black corner label label-customize" ng-click="copyContent($event)">
-                                <i class="pin icon"></i>
-                            </a>
-                            <div style="{{factsheet.sentimentCSS}}" class="customize-color sentiment"></div>
-                            <div style="margin:4em 2em 2em 2em;">
-                                <h3 class="DocTitle">{{factsheet.title}}</h3>
-                                <h5 class="DocAuthorAndDate dividing header">{{factsheet.date}}</h5>
-                                <p class="DocBody">{{factsheet.body}}</p>
-                                <button class="ui inverted blue button ReadMore" ng-click="openModal($event)">
-                                    Read More
-                                </button><!--Read More button-->
-                            </div>
-                        </div>
-                    </div><!--column-customize-->
-                </div><!--four column row-->
-            </div><!--ui page grid-->
-        </div><!--container-->
-
     </div>
 
     <div id="pinboard">
